--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,12 @@
                                 <option value="raspigpio">Raspberry GPIO API</option>
                             </select>
                             <br>
-                            <span style="font-size:10px;color:darkgreen" id="apiserverdisabled">Web-MIDI Connected</span>
+                            <span style="font-size:10px;color:darkgreen" id="apiserverdisabled" class="d-none">Web-MIDI Connected</span>
+                            <span style="font-size:10px;color:darkgreen" id="webmidiunavailable">Web-MIDI Unavailable</span>
                             <span style="font-size:10px;color:darkgreen" id="apiserverenabled" class="d-none">API Server Available</span>
                             <span style="font-size:10px;color:darkred" id="apiserverunavailable" class="d-none">API Server Unavailable !</span>
                          </td>
                       </tr>
-
-                      
 
                       <tr class="_menu_interface_">
                          <td>
