Custom sysex execute

--- a/public/index.html
+++ b/public/index.html
@@ -391,6 +391,15 @@
                           </tr>
 
                           <tr class="_menu_options_">
+                             <td><label class="parm-label">Sysex</label></td>
+                             <td>
+                                <input type="text" class="parm-text" id="customSysex" value="">
+                                <input type="button" id="executeCustomSysex" value="Execute" class="parm-but parm-but-blue">
+                                <input type="button" id="clearCustomSysex" value="Clear" class="parm-but parm-but-blue">
+                             </td>
+                          </tr>
+
+                          <tr class="_menu_options_">
                              <td><label class="parm-label">Pointer</label></td>
                              <td><input type="checkbox" checked id="checkToggle">
                           </td>
